# projeto-python-duckdb-02

./: .env  README.md  duckdb.db  pipeline.py  pyproject.toml
sql/: create_table.sql
